--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.2"
     }
 }
